--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "./components/navbar.scss";
 
 // Sections
+@import "./sections/about.scss";
 @import "./sections/masthead.scss";
 @import "./sections/portfolio.scss";
 @import "./sections/timeline.scss";
