--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,12 +8,15 @@
 // Import Bootstrap
 @import "bootstrap/scss/bootstrap.scss";
 
+//@import 'bootstrap/dist/css/bootstrap.min.css';
+
 // Global CSS
 @import "./global.scss";
 
 // Components
 @import "./components/buttons.scss";
 @import "./components/navbar.scss";
+//@import "./components/carousel.scss";
 
 // Sections
 @import "./sections/about.scss";
@@ -23,3 +26,6 @@
 @import "./sections/team.scss";
 @import "./sections/contact.scss";
 @import "./sections/footer.scss";
+
+
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.cs');
