--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -7,7 +7,7 @@ header.masthead {
     padding-bottom: 6rem;
     text-align: center;
     color: $black;
-    background-image: url("../assets/img/unsplash2.jpg");
+    background-image: url("../assets/img/open.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
