--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,4 +28,5 @@
 @import "./sections/footer.scss";
 
 
-@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.cs');
+//@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.cs');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
