--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -98,6 +98,9 @@ left: auto;
 right: auto;
 }
 
+.accordion {
+    padding: 11px;
+}
 
 // Increase the padding on sections when screen size is greater
 // than the medium breakpoint (set by Bootstrap)
